--- a/dist-prod/widgets/vworld_map_widget3/manifest.json
+++ b/dist-prod/widgets/vworld_map_widget3/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "vworld_map_widget3",
-  "label": "VWorld Map Widge3",
+  "label": "VWorldMap",
   "type": "widget",
   "version": "1.15.0",
   "exbVersion": "1.15.0",
