--- a/dist-prod/widgets/custom-controller/manifest.json
+++ b/dist-prod/widgets/custom-controller/manifest.json
@@ -16,6 +16,10 @@
       "settingUri": "message-actions/open-widgets-action-setting"
     }
   ],
+  "excludeDataActions": [
+    "jimu-arcgis.*",
+    "arcgis-map.*"
+  ],
   "defaultSize": {
     "height": 54,
     "width": 200,
